# rocket

./: Cargo.toml  README.md
src/: cube.rs  main.rs
