[package]
name = "rocket"
description = "Search program for adapting 3D Rubik's cube algorithms to 4D efficiently via RKT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cubesim = "0.0.7"
eframe = "0.27.2"
lazy_static = "1.4.0"
